# mdns-beacon

./: .bumpversion.cfg  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.rst  README.md  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  tasks.py
.github/workflows/: codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  mdns_beacon.cli.rst  mdns_beacon.rst  modules.rst  requirements.txt  usage.rst
src/mdns_beacon/: __init__.py  base.py  beacon.py  cli.py  listener.py  mdns_beacon.py
src/mdns_beacon/cli/: __init__.py  layouts.py  main.py  types.py
tests/: __init__.py  conftest.py  test_base.py  test_beacon.py  test_cli.py  test_listener.py  test_mdns_beacon.py
tests/helpers/: __init__.py  contextmanager.py
tests/test_cli/: __init__.py  test_layouts.py  test_main.py  test_types.py
