[tool.poetry]
name = "mdns-beacon"
version = "0.7.0"
description = "Multicast DNS (mDNS) Beacon to announce multiple CNAME aliases across your local network."
authors = ["Federico Jaureguialzo <fedejaure@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/fedejaure/mdns-beacon"
repository = "https://github.com/fedejaure/mdns-beacon"
documentation = "https://mdns-beacon.readthedocs.io"
keywords = ["mdns-beacon", "mdns", "beacon", "avahi", "zeroconf", "bonjour"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fedejaure/mdns-beacon/issues"


[tool.poetry.scripts]
mdns-beacon = 'mdns_beacon.cli.main:main'


[tool.poetry.dependencies]
python = "<3.11,>=3.8"
click = "^8.1.3"
zeroconf = "^0.38.7"
rich = "^12.5.1"
python-slugify = "^6.1.2"
typing-extensions = "^4.3.0"
click-option-group = "^0.5.3"


[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
invoke = "^1.7.1"
flake8 = "^4.0.1"
flakeheaven = "^3.0.0"
flake8-builtins = "^1.5.3"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.6.0"
flake8-bugbear = "^22.7.1"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^3.0.0"
flake8-broken-line = "^0.4.0"
darglint = "^1.8.1"
pylint = "^2.14.5"
isort = "^5.10.1"
black = "^22.6"
safety = "^2.1.1"
mypy = "^0.971"
sphinx = "^5.0.2"
recommonmark = "^0.7.1"
bump2version = "^1.0.1"
pytest = "^7.1.2"
xdoctest = "^1.0.0"
coverage = {version = "^6.4.2", extras = ["toml"]}
pytest-cov = "^3.0.0"
watchdog = {version = "^2.1.9", extras = ["watchmedo"]}
ipython = "^7.34"
pytest-asyncio = "^0.18.3"
pytest-mock = "^3.8.2"
types-click = "^7.1.8"
types-python-slugify = "^6.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mdns_beacon"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.flakeheaven]
format = "grouped"
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
flake8-annotations = ["+*", "-ANN1??", "-ANN401"]
flake8-docstrings = ["+*", "-D212"]
"flake8-*" = ["+*"]
pylint = ["-C????", "-E????", "+F????", "+I????", "-R????", "-W????"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox"]
known_local_folder = ["helpers"]

[tool.black]
line-length = 99
target-version = ["py37"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:xdoctest.*:",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
norecursedirs = "tests/helpers"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
